--- a/SignitAPI.Client/SignitApiClient.nuspec
+++ b/SignitAPI.Client/SignitApiClient.nuspec
@@ -2,13 +2,13 @@
 <package >
   <metadata>
     <id>SignitAPI.Client</id>
-    <version>1.0.0.1</version>
+    <version>1.0.0.3</version>
     <title>SignitApiClient</title>
     <authors>Nosunset</authors>
     <owners>Nosunset</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Signit API client</description>
-    <releaseNotes>Initial installation of first version.</releaseNotes>
+    <releaseNotes>Slight version update.</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>Nosunset Signit</tags>
 	<dependencies> 
