--- a/SignitAPI.Client/app.config
+++ b/SignitAPI.Client/app.config
@@ -7,7 +7,7 @@
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://pp.signplatform.com/wcf/RemoteOrderService.svc"
+            <endpoint address="http://localhost:7091/wcf/RemoteOrderService.svc"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IRemoteOrderService"
                 contract="RemoteOrderService.IRemoteOrderService" name="BasicHttpBinding_IRemoteOrderService" />
         </client>
