--- a/SignitAPI.Client.IntegrationSample/Web.config
+++ b/SignitAPI.Client.IntegrationSample/Web.config
@@ -14,15 +14,15 @@
 
     <add key="AppBaseUrl" value="http://localhost:61147"/>
     <!--Signit-->
-    <add key="SignitMerchantName" value="" />
-    <add key="SignitMerchantPassword" value="" />
+    <add key="SignitMerchantName" value="Anders_Corp_1" />
+    <add key="SignitMerchantPassword" value="Anders_Corp_1" />
     <!--https://www.signplatform.com for production-->
-    <add key="SignitApiBaseUri" value="https://pp.signplatform.com" />
-    <add key="SignitApiExitUrl" value="http://localhost:1742/cart#digital-signature/" />
+    <add key="SignitApiBaseUri" value="http://localhost:7091/" />
+    <add key="SignitApiExitUri" value="http://localhost:61147/#/details/" />
     <!--Your obtained client id. You can register on https://pp.signplatform.com as a company and get client id and secret-->
     <!--Keep in mind that you need to contact signit to enable API-->
-    <add key="SignitClientId" value="" />
-    <add key="SignitClientSecret" value="" />
+    <add key="SignitClientId" value="9O9N9FREKE4D2429LVXV848KTSLEOC" />
+    <add key="SignitClientSecret" value="9O9N9FREKE4D2429LVXV848KTSLEOC1JERGZ_RUZ44HVFFXOZEL2JNLFQZ4Q" />
     <!--Signit end-->
   </appSettings>
 
