--- a/SignitAPI.Client.IntegrationSample/packages.config
+++ b/SignitAPI.Client.IntegrationSample/packages.config
@@ -21,4 +21,5 @@
   <package id="Microsoft.Net.Http.ru" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="SignitAPI.Client" version="1.0.0.10" targetFramework="net45" />
 </packages>
