Change to reference

--- a/SignitAPI.Client.IntegrationSample/SignitAPI.Client.IntegrationSample.csproj
+++ b/SignitAPI.Client.IntegrationSample/SignitAPI.Client.IntegrationSample.csproj
@@ -45,10 +45,6 @@
       <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="SignitIntegrationClient, Version=1.0.0.10, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SignitAPI.Client.1.0.0.10\lib\net40\SignitIntegrationClient.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -182,6 +178,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SignitAPI.Client\SignitAPI.Client.csproj">
+      <Project>{0a5f0cf6-8007-44ea-aee5-9161812ae423}</Project>
+      <Name>SignitAPI.Client</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
